fix: Fix text alignment of action cards

--- a/assets/stylesheets/components/cards.css
+++ b/assets/stylesheets/components/cards.css
@@ -21,6 +21,7 @@
     justify-content: center;
 
     font-weight: bold;
+    text-align: center;
     text-decoration: none;
 
     background-color: var(--color-primary3);
